# nf-server

./: .gitignore  CMakeLists.txt  README.md  nf-server
cert/: cert.pem  key.pem
mssql/: install_mssql
script/: build.py  clean.py  install.py  start.py  stop.py  tar.py  uninstall.py  utils.py
src/: main.cpp
src/core/: Core.cpp  Core.h
src/db/: DbConfig.h  DbManager.cpp  DbManager.h
src/egress/: ActionFactory.cpp  ActionFactory.h  TxRouter.cpp  TxRouter.h
src/execution/: Action.h  Event.h
src/execution/login/: LoginAction.cpp  LoginAction.h  LoginBuilder.cpp  LoginBuilder.h  LoginContext.cpp  LoginContext.h  LoginEvent.cpp  LoginEvent.h  LoginFailAction.cpp  LoginFailAction.h  LoginParser.cpp  LoginParser.h  LoginSuccessAction.cpp  LoginSuccessAction.h
src/execution/shard/: ShardContext.cpp  ShardContext.h  ShardManager.cpp  ShardWorker.cpp  ShardWorker.h
src/execution/world/: Channel.cpp  Channel.h  Map.cpp  Map.h  World.cpp  World.h  WorldContext.cpp  WorldContext.h
src/ingress/: EventFactory.cpp  EventFactory.h  RxRouter.cpp  RxRouter.h
src/net/packet/: ActionPacket.cpp  ActionPacket.h  EventPacket.cpp  EventPacket.h  Packet.cpp  Packet.h  PacketBuilder.cpp  PacketBuilder.h  PacketParser.cpp  PacketParser.h  ParsedPacket.cpp  ParsedPacket.h  ParsedPacketTypes.h
src/net/tcp/: TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h
src/net/tls/: TlsClient.cpp  TlsClient.h  TlsContext.cpp  TlsContext.h  TlsServer.cpp  TlsServer.h
src/net/udp/: UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h
src/packet/: Packet.cpp  Packet.h  PacketBuilder.cpp  PacketParser.h  ParsedPacket.cpp  ParsedPacket.h  ParsedPacketTypes.h
src/protocol/tcp/: TcpServer.cpp  TcpServer.h
src/session/: Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
src/shard/: ShardContext.cpp  ShardContext.h  ShardManager.cpp  ShardManager.h  ShardWorker.h
src/simulator/: Client.cpp
src/util/: Logger.cpp  Logger.h  Macro.h  Random.cpp  Random.h  ThreadManager.cpp  ThreadManager.h
(+2 files in other folders)
